@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.2-5
-Date: 2006-09-29
+Version: 0.2-6
+Date: 2006-09-30
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw, Christophe Croux, see file 'Copyrights';
@@ -20,4 +20,4 @@ Depends: stats, graphics, methods
 Suggests: MASS
 LazyLoad: yes
 License: GPL version 2 or later
-Packaged: Fri Sep 29 19:26:10 2006; maechler
+Packaged: Sat Sep 30 22:45:52 2006; maechler
